--- a/index.html
+++ b/index.html
@@ -1,88 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ultragame</title>
-    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-</head>
-<body>
-    <a-scene>
-        <!-- Небо и поверхность -->
-        <a-sky color="#b6e5ff"></a-sky>
-        <a-plane color="#7cc991" height="50" width="50" rotation="-90 0 0"></a-plane>
-
-        <!-- Камера и риг для перемещения -->
-        <a-entity id="rig" position="0 1.6 0" movement-controls>
-            <a-entity id="camera" camera look-controls></a-entity>
-        </a-entity>
-
-        <!-- Контроллеры Pico -->
-        <a-entity id="left-controller" 
-                  tracked-controls="controller: 0; hand: left"
-                  pico-controls="hand: left"
-                  teleport-controls="cameraRig: #rig; curveShootingSpeed: 3; collisionEntities: [a-plane]"
-                  raycaster="objects: .collectible; showLine: true; far: 10;" 
-                  line="color: red; opacity: 0.8;">
-        </a-entity>
-
-        <a-entity id="right-controller" 
-                  tracked-controls="controller: 1; hand: right"
-                  pico-controls="hand: right"
-                  raycaster="objects: .collectible; showLine: true; far: 10;" 
-                  line="color: red; opacity: 0.8;">
-        </a-entity>
-
-        <!-- Сферы для сбора -->
-        <a-sphere class="collectible" position="-9 1 17" radius="1" color="#4682B4"></a-sphere>
-        <a-sphere class="collectible" position="-15 1.42 -19" radius="1.42" color="#9400D3"></a-sphere>
-        <a-sphere class="collectible" position="3 1.33 9" radius="1.33" color="#FF00FF"></a-sphere>
-
-        <!-- Счётчик -->
-        <a-entity id="score" text="value: Score: 0; color: black; align: center; width: 5" position="0 2.5 -5"></a-entity>
-
-        <!-- Таймер -->
-        <a-text id="timer" value="Time: 60" position="1.5 2.5 -5" color="black"></a-text>
-        
-        <!-- Текст завершения игры -->
-        <a-entity id="game-over" text="value: ; color: red; align: center; width: 7" position="0 3 -5"></a-entity>
-    </a-scene>
-</body>
-<script>
-    let collectedCount = 0;
-    let totalCollectibles = 3;
-
-    AFRAME.registerComponent('collectible', {
-        init: function () {
-            this.el.addEventListener('click', () => {
-                this.el.parentNode.removeChild(this.el);
-                let scoreEntity = document.querySelector('#score');
-                let currentScore = parseInt(scoreEntity.getAttribute('text').value.replace('Score: ', ''), 10);
-                currentScore++;
-                scoreEntity.setAttribute('text', 'value: Score: ' + currentScore);
-                collectedCount++;
-                if (collectedCount === totalCollectibles) endGame();
-            });
-        }
-    });
-
-    function endGame() {
-        let scoreEntity = document.querySelector('#score');
-        let finalScore = parseInt(scoreEntity.getAttribute('text').value.replace('Score: ', ''), 10);
-        let gameOverEntity = document.querySelector('#game-over');
-        gameOverEntity.setAttribute('text', 'value: Game Over! Your score: ' + finalScore);
-    }
-
-    let timeLeft = 60;
-    let timerElement = document.querySelector('#timer');
-    function updateTimer() {
-        if (timeLeft > 0) {
-            timeLeft--;
-            timerElement.setAttribute('value', 'Time: ' + timeLeft);
-        } else {
-            endGame();
-        }
-    }
-    setInterval(updateTimer, 1000);
-</script>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>ultragame</title> 
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script> 
+</head> 
+<body> 
+    <a-scene> 
+        <a-sky color="#b6e5ff"></a-sky> 
+        <a-plane color="#7cc991" height="50" width="50" rotation="-90 0 0"></a-plane> 
+        <a-entity camera look-controls wasd-controls position="0 1 0"></a-entity> 
+        <a-entity cursor="rayOrigin: mouse"></a-entity> 
+ 
+        <!-- Сферы --> 
+        <a-sphere collectible position="-9 1 17" radius="1" color="#4682B4"></a-sphere> 
+        <a-sphere collectible position="-15 1.42 -19" radius="1.42" color="#9400D3"></a-sphere> 
+        <a-sphere collectible position="3 1.33 9" radius="1.33" color="#FF00FF"></a-sphere> 
+ 
+        <!-- Счёт (увеличенный текст) --> 
+        <a-entity id="score" text="value: Score: 0; color: black; align: center; width: 5" position="0 2.5 -5"></a-entity> 
+ 
+        <a-text id="timer" value="Time: 60" position="1.5 2.5 -5" color="black"></a-text> 
+ 
+        <!-- Текст завершения игры --> 
+        <a-entity id="game-over" text="value: ; color: red; align: center; width: 7" position="0 3 -5"></a-entity> 
+    </a-scene> 
+</body> 
+<script> 
+    let collectedCount = 0; // Счётчик собранных объектов 
+    let totalCollectibles = 3; // Всего объектов для сбора 
+ 
+    // Регистрация компонента "collectible" 
+    AFRAME.registerComponent('collectible', { 
+        init: function () { 
+            this.el.addEventListener('click', () => { 
+                // Удаляем сферу из сцены 
+                this.el.parentNode.removeChild(this.el); 
+ 
+                // Обновляем счёт 
+                let scoreEntity = document.querySelector('#score'); 
+                let currentScore = parseInt(scoreEntity.getAttribute('text').value.replace('Score: ', ''), 10); 
+                currentScore += 1; 
+ 
+                // Устанавливаем новое значение текста 
+                scoreEntity.setAttribute('text', 'value: Score: ' + currentScore + '; color: black; align: center; width: 5'); 
+ 
+                // Увеличиваем счётчик собранных объектов 
+                collectedCount++; 
+                if (collectedCount === totalCollectibles) { 
+                    endGame(); // Завершаем игру, если всё собрано 
+                } 
+            }); 
+        } 
+    }); 
+ 
+    // Функция завершения игры 
+    function endGame() { 
+        let scoreEntity = document.querySelector('#score'); 
+        let finalScore = parseInt(scoreEntity.getAttribute('text').value.replace('Score: ', ''), 10); 
+ 
+        // Показываем текст завершения игры 
+        let gameOverEntity = document.querySelector('#game-over'); 
+        gameOverEntity.setAttribute('text', 'value: Game Over! Your score: ' + finalScore + '; color: red; align: center; width: 7'); 
+    } 
+ 
+    // Таймер 
+    let timeLeft = 60; 
+    let timerElement = document.querySelector('#timer'); 
+ 
+    function updateTimer() { 
+        if (timeLeft > 0) { 
+            timeLeft--; 
+            timerElement.setAttribute('value', 'Time: ' + timeLeft); 
+        } else { 
+            endGame(); 
+        } 
+    } 
+ 
+    // Обновление каждую секунду 
+    setInterval(updateTimer, 1000); 
+</script> 
 </html>
